# deterministic-mcp-agents

./: CONTRIBUTING.md  Cargo.toml  Makefile  README.md  test_workflows.sh
.github/badges/: shields.json
.github/workflows/: build.yml  ci.yml  master.yml  quality-gate.yml  quality.yml  tests.yml
docs/: demo-spec.md
final_project/: Cargo.toml
final_project/src/: main.rs
modules/01-foundations/: Cargo.toml
modules/01-foundations/examples/: 00_course_overview.rs  01_certainty_scope_demo.rs  02_floridi_conjecture.rs  03_mcp_protocol_basics.rs
modules/01-foundations/src/: certainty.rs  floridi.rs  fsm.rs  lib.rs  scope.rs
modules/02-setup/: Cargo.toml
modules/02-setup/examples/: 04_toolchain_setup.rs  05_pmat_validator.rs  06_quality_gates.rs  07_calculator_agent.rs
modules/02-setup/src/: calculator.rs  lib.rs  pmat.rs  quality.rs
modules/03-agents/: Cargo.toml
modules/03-agents/examples/: 08_fsm_builder.rs  09_refactor_fsm.rs  10_code_analysis_fsm.rs  11_error_boundaries.rs
modules/03-agents/src/: analysis_fsm.rs  fsm_builder.rs  lib.rs  refactor_fsm.rs
modules/04-mcp-server/: Cargo.toml  Dockerfile
modules/04-mcp-server/examples/: 12_pmcp_server.rs  13_tool_composition.rs  14_async_handler.rs  15_production_server.rs
modules/04-mcp-server/src/: lib.rs  server.rs
modules/05-testing/: Cargo.toml
modules/05-testing/examples/: 16_property_tests.rs  17_fuzzing.rs  18_integration_tests.rs
modules/05-testing/src/: fuzzing.rs  lib.rs  property_tests.rs
pmcp/: Cargo.toml
pmcp/src/: lib.rs  protocol.rs  server.rs  tools.rs  transport.rs
scripts/: test_summary.sh  verify_course_completeness.sh
