[workspace]
members = [
    "modules/01-foundations",
    "modules/02-setup",
    "modules/03-agents",
    "modules/04-mcp-server",
    "modules/05-testing",
    "final_project",
    "pmcp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["PMAT Course"]
license = "MIT"
repository = "https://github.com/paiml/deterministic-mcp-agents-course"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
async-trait = "0.1"
quickcheck = "1.0"
quickcheck_macros = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
futures = "0.3"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true
opt-level = 3

[profile.bench]
inherits = "release"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0