[package]
name = "module-01-foundations"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "00_course_overview"
path = "examples/00_course_overview.rs"

[[bin]]
name = "01_certainty_scope_demo"
path = "examples/01_certainty_scope_demo.rs"

[[bin]]
name = "02_floridi_conjecture"
path = "examples/02_floridi_conjecture.rs"

[[bin]]
name = "03_mcp_protocol_basics"
path = "examples/03_mcp_protocol_basics.rs"

[dependencies]
pmcp = { path = "../../pmcp" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }