[package]
name = "module-01-foundations"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[example]]
name = "00_course_overview"
path = "examples/00_course_overview.rs"

[[example]]
name = "01_certainty_scope_demo"
path = "examples/01_certainty_scope_demo.rs"

[[example]]
name = "02_floridi_conjecture"
path = "examples/02_floridi_conjecture.rs"

[[example]]
name = "03_mcp_protocol_basics"
path = "examples/03_mcp_protocol_basics.rs"

[dependencies]
pmcp = "0.1.0"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }