[package]
name = "module-05-testing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[example]]
name = "16_property_tests"
path = "examples/16_property_tests.rs"

[[example]]
name = "17_fuzzing"
path = "examples/17_fuzzing.rs"

[[example]]
name = "18_integration_tests"
path = "examples/18_integration_tests.rs"

[dependencies]
pmcp = "0.1.0"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
proptest = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }